--- a/source/courses/cmps364/hw/hw1.html
+++ b/source/courses/cmps364/hw/hw1.html
@@ -181,9 +181,10 @@
   </p>
   <p class="c1 c0"><span></span>
   </p>
-  <p class="c0"><span class="c4">Page 55, Exercise 2.4.3 </span><span class="c2">(a &ndash; i)</span>
+  <p class="c0"><span class="c4">Page 55, Exercise 2.4.3 </span><span class="c2">(a &ndash; d)</span>
   </p>
-  <p class="c0"><span>Note, expression trees or linear form are acceptable. If using linear form, use temporary relations (and assignment operator) to enhance clarity (See section 2.4.13)</span>
+  <p class="c0"><span>The problem in the text is asking you to write relational algebra expression - but instead<span class="c9">, please provide SQL queries</span><span>&nbsp;to accomplish what is being asked in each part. &nbsp;</span>
+    <span>No credit will be given unless your answers are provided as SQL.</span>
   </p>
   <p class="c0 c1"><span></span>
   </p>
