--- a/source/courses/cmps364/hw/hw3-uml.html
+++ b/source/courses/cmps364/hw/hw3-uml.html
@@ -1,50 +1,50 @@
 <html>
 
 <head>
-  <title>Homework 4</title>
+  <title>Homework 3</title>
   <meta content="text/html; charset=UTF-8" http-equiv="content-type">
   <style type="text/css">
     ol {
       margin: 0;
       padding: 0
     }
-    .c8 {
+    .c9 {
       max-width: 540pt;
       background-color: #ffffff;
       padding: 36pt 36pt 36pt 36pt
     }
-    .c7 {
+    .c1 {
+      height: 11pt;
+      direction: ltr
+    }
+    .c5 {
       color: #1155cc;
       text-decoration: underline
     }
-    .c0 {
-      color: #1c4587;
-      font-weight: bold
-    }
-    .c10 {
+    .c8 {
       color: inherit;
       text-decoration: inherit
+    }
+    .c6 {
+      font-size: 18pt
+    }
+    .c2 {
+      font-weight: bold
+    }
+    .c7 {
+      color: #1c4587
+    }
+    .c10 {
+      color: #0b5394
     }
     .c3 {
       direction: ltr
     }
-    .c5 {
-      font-size: 18pt
-    }
-    .c1 {
-      font-weight: bold
-    }
-    .c6 {
-      color: #0000ff
-    }
-    .c9 {
-      color: #980000
-    }
-    .c2 {
+    .c0 {
       font-style: italic
     }
     .c4 {
-      height: 11pt
+      color: #980000
     }
     .title {
       widows: 2;
@@ -161,50 +161,42 @@
   </style>
 </head>
 
-<body class="c8">
-  <p class="c3"><span class="c5">CMPS 364 - Database Design</span>
+<body class="c9">
+  <p class="c3"><span class="c6">CMPS 364 - Database Design</span>
   </p>
-  <p class="c3"><span class="c5">Homework #4</span>
+  <p class="c3"><span class="c6">Homework #3</span>
   </p>
-  <p class="c3 c4"><span></span>
+  <p class="c1"><span></span>
   </p>
-  <p class="c3"><span class="c0">Please complete the following exercises from the textbook. &nbsp;</span>
+  <p class="c3"><span class="c2 c7">Please complete the following exercises from the textbook. &nbsp;</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span class="c2"></span>
   </p>
-  <p class="c3"><span class="c1">Reminder: &nbsp;</span><span>The exercises listed refer to those found in the course </span><span class="c7"><a class="c10" href="../">textbook listed on the syllabus</a></span><span>. &nbsp;It is entirely your responsibility to make sure you are using the right book/edition and that you answer the correct questions. &nbsp;</span>
+  <p class="c3"><span class="c2">Reminder: &nbsp;</span><span>The exercises listed refer to those found in the course </span><span class="c5"><a class="c8" href="../">textbook listed on the syllabus</a></span><span>. &nbsp;It is entirely your responsibility to make sure you are using the right book/edition and that you answer the correct questions. &nbsp;</span>
     <span
-    class="c2">If you turn in the answers to the wrong problem - you won&rsquo;t get credit!</span>
+    class="c0">If you turn in the answers to the wrong problem - you won&rsquo;t get credit!</span>
   </p>
-  <p class="c3 c4"><span class="c2"></span>
+  <p class="c1"><span class="c0"></span>
   </p>
-  <p class="c3"><span>Each of the problems below work on the database schema specified page 55-57 (Battleships). Please construct a database in H2 with the schema and populate the database with the actual data show on page 56-57 in the textbook.</span>
+  <p class="c3"><span class="c2">Problem 1: Page 138, Exercise 4.1.3. </span><span>Include Referential Integrity Notations where Applicable.</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span class="c2"></span>
   </p>
-  <p class="c3"><span class="c1">Exercise 6.1.4 (page 257-258) </span><span class="c1 c6">parts A, C, and E</span>
+  <p class="c3"><span class="c2">Problem 2: </span><span>Create a Relational Schema for the ER Diagram you create in Problem 1.</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span class="c2"></span>
   </p>
-  <p class="c3"><span class="c1">Exercise 6.2.3 (page 268) </span><span class="c1 c6">parts A, E</span>
+  <p class="c3"><span class="c2">Problem 3: </span><span>Provide a comparable UML Diagram that describes the same information as your ER Diagram in Problem 1.</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span></span>
   </p>
-  <p class="c3"><span class="c1">Exercise 6.3.9 (page 280-281)</span>
+  <p class="c3"><span class="c10">Note &ndash; when developing the schema in problems 1-3, you are free to make reasonable assumptions about the rules (for example &ndash; is a fan allowed to have more than one favorite team?). Please just make sure you document your choices.</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span></span>
   </p>
-  <p class="c3"><span class="c1">Exercise 6.4.7 (page 290) </span><span class="c1 c6">part E</span>
+  <p class="c3"><span class="c4">Please submit this assignment as a Microsoft Word Document (you may use PowerPoint to do your diagrams). Please DO NOT turn in a scanned in image of a handwritten diagram (unless your handwriting is exceptionally readable!).</span>
   </p>
-  <p class="c3 c4"><span class="c1"></span>
-  </p>
-  <p class="c3"><span class="c1">Exercise 6.5.2 (page 295) </span><span class="c1 c6">parts A, C, and D</span>
-  </p>
-  <p class="c3 c4"><span class="c1"></span>
-  </p>
-  <p class="c3"><span class="c2 c9">Submit your SQL Statements as a TEXT file with an .sql extension. Please consolidate all Queries into one file. Do not submit Word documents or PDF&rsquo;s for this assignment (I will run your queries).</span>
-  </p>
-  <p class="c3 c4"><span class="c1"></span>
+  <p class="c1"><span class="c2"></span>
   </p>
 </body>
 
