--- a/source/courses/cmps369/code/09_js_examples/hello.html
+++ b/source/courses/cmps369/code/09_js_examples/hello.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <title>Hello World</title>
 </head>
+
 <body>
     <script>    
         alert("hello world");
         console.log("hello world");
         document.write("<p>hello world</p>");
-    </script
+    </script>
 </body>
+
 </html>
