--- a/source/courses/cmps364/hw/hw1.html
+++ b/source/courses/cmps364/hw/hw1.html
@@ -8,41 +8,52 @@
       margin: 0;
       padding: 0
     }
+
     .c8 {
       max-width: 540pt;
       background-color: #ffffff;
       padding: 36pt 36pt 36pt 36pt
     }
+
     .c2 {
       color: #980000;
       font-weight: bold
     }
+
     .c9 {
       color: #1155cc;
       text-decoration: underline
     }
+
     .c5 {
       color: inherit;
       text-decoration: inherit
     }
+
     .c3 {
       font-size: 18pt
     }
+
     .c4 {
       font-weight: bold
     }
+
     .c7 {
       color: #1c4587
     }
+
     .c6 {
       font-style: italic
     }
+
     .c1 {
       height: 11pt
     }
+
     .c0 {
       direction: ltr
     }
+
     .title {
       widows: 2;
       padding-top: 0pt;
@@ -55,6 +66,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     .subtitle {
       widows: 2;
       padding-top: 0pt;
@@ -68,17 +80,20 @@
       padding-bottom: 10pt;
       page-break-after: avoid
     }
+
     li {
       color: #000000;
       font-size: 11pt;
       font-family: "Arial"
     }
+
     p {
       color: #000000;
       font-size: 11pt;
       margin: 0;
       font-family: "Arial"
     }
+
     h1 {
       widows: 2;
       padding-top: 10pt;
@@ -91,6 +106,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     h2 {
       widows: 2;
       padding-top: 10pt;
@@ -104,6 +120,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     h3 {
       widows: 2;
       padding-top: 8pt;
@@ -117,6 +134,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     h4 {
       widows: 2;
       padding-top: 8pt;
@@ -130,6 +148,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     h5 {
       widows: 2;
       padding-top: 8pt;
@@ -142,6 +161,7 @@
       padding-bottom: 0pt;
       page-break-after: avoid
     }
+
     h6 {
       widows: 2;
       padding-top: 8pt;
@@ -159,34 +179,57 @@
 </head>
 
 <body class="c8">
-  <p class="c0"><span class="c3">CMPS 364 - Database Design</span>
+  <p class="c0">
+    <span class="c3">CMPS 364 - Database Design</span>
   </p>
-  <p class="c0"><span class="c3">Homework #1</span>
+  <p class="c0">
+    <span class="c3">Homework #1</span>
   </p>
-  <p class="c1 c0"><span></span>
+  <p class="c1 c0">
+    <span></span>
   </p>
-  <p class="c0"><span class="c4 c7">Please complete the following exercises from the textbook. &nbsp;</span>
+  <p class="c0">
+    <span class="c4 c7">Please complete the following exercises from the textbook. &nbsp;</span>
   </p>
-  <p class="c1 c0"><span class="c4"></span>
+  <p class="c1 c0">
+    <span class="c4"></span>
   </p>
-  <p class="c0"><span class="c4">Reminder: &nbsp;</span><span>The exercises listed refer to those found in the course </span><span class="c9"><a class="c5" href="../">textbook listed on the syllabus</a></span><span>. &nbsp;It is entirely your responsibility to make sure you are using the right book/edition and that you answer the correct questions. &nbsp;</span>
-    <span
-    class="c6">If you turn in the answers to the wrong problem - you won&rsquo;t get credit!</span>
+  <p class="c0">
+    <span class="c4">Reminder: &nbsp;</span>
+    <span>The exercises listed refer to those found in the course </span>
+    <span class="c9">
+      <a class="c5" href="../">textbook listed on the syllabus</a>
+    </span>
+    <span>. &nbsp;It is entirely your responsibility to make sure you are using the right book/edition and that you answer the
+      correct questions. &nbsp;</span>
+    <span class="c6">If you turn in the answers to the wrong problem - you won&rsquo;t get credit!</span>
   </p>
-  <p class="c1 c0"><span class="c6"></span>
+  <p class="c1 c0">
+    <span class="c6"></span>
   </p>
-  <p class="c0"><span class="c4">Page 37, Exercise 2.3.2</span><span class="c2">&nbsp;(a &ndash; f)</span>
+  <p class="c0">
+    <span class="c4">Page 37, Exercise 2.3.2</span>
+    <span class="c2">&nbsp;(a &ndash; f)</span>
   </p>
-  <p class="c0"><span>Provide the SQL Commands to create the relationships in (a-d) and perform the operations in e and f. Note, you must include data type and primary key notation in your relation declarations.</span>
+  <p class="c0">
+    <span>Provide the SQL Commands to create the relationships in (a-d) and perform the operations in e and f. Note, you must include
+      data type and primary key notation in your relation declarations.</span>
   </p>
-  <p class="c1 c0"><span></span>
+  <p class="c1 c0">
+    <span></span>
   </p>
-  <p class="c0"><span class="c4">Page 55, Exercise 2.4.3 </span><span class="c2">(a &ndash; d)</span>
+  <p class="c0">
+    <span class="c4">Page 55, Exercise 2.4.3 </span>
+    <span class="c2">(a &ndash; c)</span>
   </p>
-  <p class="c0"><span>The problem in the text is asking you to write relational algebra expression - but instead<span class="c9">, please provide SQL queries</span><span>&nbsp;to accomplish what is being asked in each part. &nbsp;</span>
-    <span>No credit will be given unless your answers are provided as SQL.</span>
+  <p class="c0">
+    <span>The problem in the text is asking you to write relational algebra expression - but instead
+      <span class="c9">, please provide SQL queries</span>
+      <span>&nbsp;to accomplish what is being asked in each part. &nbsp;</span>
+      <span>No credit will be given unless your answers are provided as SQL.</span>
   </p>
-  <p class="c0 c1"><span></span>
+  <p class="c0 c1">
+    <span></span>
   </p>
 </body>
 
